--- a/Meme Editor/Base.lproj/Main.storyboard
+++ b/Meme Editor/Base.lproj/Main.storyboard
@@ -113,6 +113,7 @@
                         <outlet property="topToolbar" destination="Add-7K-ph9" id="XDA-Df-2go"/>
                         <outletCollection property="bothTextFields" destination="15r-5e-VNL" collectionClass="NSMutableArray" id="SrV-ws-XYG"/>
                         <outletCollection property="bothToolbars" destination="Add-7K-ph9" collectionClass="NSMutableArray" id="NrD-7T-QFk"/>
+                        <outletCollection property="bothToolbars" destination="Gjx-PF-SHc" collectionClass="NSMutableArray" id="Cq2-dR-V7b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
